# atlas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: scaleway.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  681e2f595540_initial_migration_with_complete_schema.py
app/: auth.py  config.py  database.py  main.py
app/chunking_services/: markdown_chunker.py  python_chunker.py
app/models/: __init__.py  chunk.py  directory.py  document.py  permission.py  subtenant.py
app/routers/: directories.py  documents.py  ingestion.py  permissions.py  retrieval.py  subtenants.py
app/services/: agentic_retrieval_service.py  chunking_service.py  ingestion_service.py  lingua_client.py  summary_service.py
tests/: final_integration_test.py  test_api_comprehensive.py  test_document_simple.txt
